@@ -7,7 +7,7 @@ from django.utils.translation import ugettext_lazy as _
 from mapentity.models import MapEntityMixin
 
 from geotrek.authent.models import StructureRelated
-from geotrek.core.models import Topology, Path
+from geotrek.core.models import Topology, Path, Trail
 from geotrek.common.models import Organism
 from geotrek.maintenance.models import Intervention, Project
 
@@ -67,10 +67,15 @@ class PhysicalEdge(MapEntityMixin, Topology):
         return cls.objects.select_related('physical_type').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_physicals(cls, trail):
+        return cls.objects.select_related('physical_type').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_physicals(cls, topology):
         return cls.overlapping(topology).select_related('physical_type')
 
 Path.add_property('physical_edges', PhysicalEdge.path_physicals)
+Trail.add_property('physical_edges',PhysicalEdge.trail_physicals)
 Topology.add_property('physical_edges', PhysicalEdge.topology_physicals)
 Intervention.add_property('physical_edges', lambda self: self.topology.physical_edges if self.topology else [])
 Project.add_property('physical_edges', lambda self: self.edges_by_attr('physical_edges'))
@@ -131,10 +136,15 @@ class LandEdge(MapEntityMixin, Topology):
         return cls.objects.select_related('land_type').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_lands(cls, trail):
+        return cls.objects.select_related('land_type').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_lands(cls, topology):
         return cls.overlapping(topology).select_related('land_type')
 
 Path.add_property('land_edges', LandEdge.path_lands)
+Trail.add_property('land_edges', LandEdge.trail_lands)
 Topology.add_property('land_edges', LandEdge.topology_lands)
 Intervention.add_property('land_edges', lambda self: self.topology.land_edges if self.topology else [])
 Project.add_property('land_edges', lambda self: self.edges_by_attr('land_edges'))
@@ -181,10 +191,15 @@ class CompetenceEdge(MapEntityMixin, Topology):
         return cls.objects.select_related('organization').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_competences(cls, trail):
+        return cls.objects.select_related('organization').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_competences(cls, topology):
         return cls.overlapping(Topology.objects.get(pk=topology.pk)).select_related('organization')
 
 Path.add_property('competence_edges', CompetenceEdge.path_competences)
+Trail.add_property('competence_edges', CompetenceEdge.trail_competences)
 Topology.add_property('competence_edges', CompetenceEdge.topology_competences)
 Intervention.add_property('competence_edges', lambda self: self.topology.competence_edges if self.topology else [])
 Project.add_property('competence_edges', lambda self: self.edges_by_attr('competence_edges'))
@@ -231,10 +246,15 @@ class WorkManagementEdge(MapEntityMixin, Topology):
         return cls.objects.select_related('organization').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_works(cls, trail):
+        return cls.objects.select_related('organization').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_works(cls, topology):
         return cls.overlapping(topology).select_related('organization')
 
 Path.add_property('work_edges', WorkManagementEdge.path_works)
+Trail.add_property('work_edges', WorkManagementEdge.trail_works)
 Topology.add_property('work_edges', WorkManagementEdge.topology_works)
 Intervention.add_property('work_edges', lambda self: self.topology.work_edges if self.topology else [])
 Project.add_property('work_edges', lambda self: self.edges_by_attr('work_edges'))
@@ -281,10 +301,15 @@ class SignageManagementEdge(MapEntityMixin, Topology):
         return cls.objects.select_related('organization').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_signages(cls, trail):
+        return cls.objects.select_related('organization').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_signages(cls, topology):
         return cls.overlapping(topology).select_related('organization')
 
 Path.add_property('signage_edges', SignageManagementEdge.path_signages)
+Trail.add_property('signage_edges', SignageManagementEdge.trail_signages)
 Topology.add_property('signage_edges', SignageManagementEdge.topology_signages)
 Intervention.add_property('signage_edges', lambda self: self.topology.signage_edges if self.topology else [])
 Project.add_property('signage_edges', lambda self: self.edges_by_attr('signage_edges'))
@@ -353,12 +378,20 @@ class RestrictedAreaEdge(Topology):
                           .filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_area_edges(cls, trail):
+        return cls.objects.select_related('restricted_area')\
+                          .select_related('restricted_area__area_type')\
+                          .filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_area_edges(cls, topology):
         return cls.overlapping(topology).select_related('restricted_area')\
                                         .select_related('restricted_area__area_type')
 
 Path.add_property('area_edges', RestrictedAreaEdge.path_area_edges)
 Path.add_property('areas', lambda self: list(set(map(attrgetter('restricted_area'), self.area_edges))))
+Trail.add_property('area_edges', RestrictedAreaEdge.trail_area_edges)
+Trail.add_property('areas', lambda self: list(set(map(attrgetter('restricted_area'), self.area_edges))))
 Topology.add_property('area_edges', RestrictedAreaEdge.topology_area_edges)
 Topology.add_property('areas', lambda self: list(set(map(attrgetter('restricted_area'), self.area_edges))))
 Intervention.add_property('area_edges', lambda self: self.topology.area_edges if self.topology else [])
@@ -407,11 +440,17 @@ class CityEdge(Topology):
         return cls.objects.select_related('city').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_city_edges(cls, trail):
+        return cls.objects.select_related('city').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_city_edges(cls, topology):
         return cls.overlapping(topology).select_related('city')
 
 Path.add_property('city_edges', CityEdge.path_city_edges)
 Path.add_property('cities', lambda self: list(set(map(attrgetter('city'), self.city_edges))))
+Trail.add_property('city_edges', CityEdge.trail_city_edges)
+Trail.add_property('cities', lambda self: list(set(map(attrgetter('city'), self.city_edges))))
 Topology.add_property('city_edges', CityEdge.topology_city_edges)
 Topology.add_property('cities', lambda self: list(set(map(attrgetter('city'), self.city_edges))))
 Intervention.add_property('city_edges', lambda self: self.topology.city_edges if self.topology else [])
@@ -458,11 +497,17 @@ class DistrictEdge(Topology):
         return cls.objects.select_related('district').filter(aggregations__path=path).distinct('pk')
 
     @classmethod
+    def trail_district_edges(cls, trail):
+        return cls.objects.select_related('district').filter(aggregations__path__trail=trail).distinct('pk')
+
+    @classmethod
     def topology_district_edges(cls, topology):
         return cls.overlapping(topology).select_related('district')
 
 Path.add_property('district_edges', DistrictEdge.path_district_edges)
 Path.add_property('districts', lambda self: list(set(map(attrgetter('district'), self.district_edges))))
+Trail.add_property('district_edges', DistrictEdge.trail_district_edges)
+Trail.add_property('districts', lambda self: list(set(map(attrgetter('district'), self.district_edges))))
 Topology.add_property('district_edges', DistrictEdge.topology_district_edges)
 Topology.add_property('districts', lambda self: list(set(map(attrgetter('district'), self.district_edges))))
 Intervention.add_property('district_edges', lambda self: self.topology.district_edges if self.topology else [])
