@@ -10,6 +10,7 @@ CHANGELOG
 * Add validity to path filter (fixes #836)
 * Do not redrape topology geometries, use path 3D geometry (fixes #832)
 * Fix document export of Trail objects (fixes #839)
+* Fix trail helpers for land layers (fixes #838, ref #842)
 
 
 0.20.3 (2013-09-30)
